--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@ a, a:visited { color : #0050e7; }
 
 
 <h2>
-<a id="reaserch-page" class="anchor" href="#reaserch-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Participating Projects:</h2>
+<a id="reaserch-page" class="anchor" href="#reaserch-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Participating Fundings:</h2>
 
 <ul>
 <li>"Study on the hierarchical modeling of underwater imaging and underwater image/video clearness method", The National Natural Science Foundation of China (NSFC). (Principal Participator) 
@@ -249,27 +249,27 @@ a, a:visited { color : #0050e7; }
 <a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Professional Service (Reviewer):</h2>
 
 <ul>
-<li>IEEE:</li>
+<li><strong>IEEE</strong>:</li>
 IEEE Transactions on Image Processing; IEEE Transactions on Cybernetics; IEEE Transactions on Circuits and Systems for Video Technology; IEEE Transactions on Neural Networks and Learning Systems;
 IEEE Transactions on Broadcasting; IEEE Transactions on Instrumentation and Measurement; IEEE Transactions on Circuits and Systems II: Express Briefs; 
 IEEE ACCESS; IEEE Signal Processing Letters; IEEE Journal of Ocean Engineering
 
-<li>Elsevier:</li> 
+<li><strong>Elsevier</strong>:</li> 
 Journal of Ocean Engineering; Digital Signal Processing; Neurocomputing; Pattern Recognition Letters; Signal Processing: Image Communication; Journal of Computers & Graphics; Knowledge-based Systems 
 
-<li>Springer:</li> 
+<li><strong>Springer</strong>:</li> 
 The Visual Computer; SCIENCE CHINA Information Sciences; Machine Vision and Applications; EURASIP Journal on Image and Video Processing
 
-<li>ACM:</li> 
+<li><strong>ACM</strong>:</li> 
 Computing Surveys
 
-<li>IET:</li> 
+<li><strong>IET</strong>:</li> 
 Computer Vision
 
-<li>SPIE:</li> 
+<li><strong>SPIE</strong>:</li> 
 Journal of Electronic Imaging
 
-<li>Conference:</li>
+<li><strong>Conference</strong>:</li>
 ICPR2018; ACM MM2019 (Program Committee Member);ICME2020
 </ul>
 <br>
@@ -291,7 +291,7 @@ ICPR2018; ACM MM2019 (Program Committee Member);ICME2020
 </ul>
 <br>
  --> 
-<!--<script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=a&t=tt&d=pPHWAkKgmzsFC_v7-3ndOuL5q3qL_EhEE16zTJwxtRw"></script>
+<script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=a&t=tt&d=pPHWAkKgmzsFC_v7-3ndOuL5q3qL_EhEE16zTJwxtRw"></script>
 <div align="center"><a href="http://www.amazingcounters.com"><img border="0" src="http://cc.amazingcounters.com/counter.php?i=3244445&c=9733648" alt="AmazingCounters.com"></a></div> 
 <!--div align="center"><a href="http://www.amazingcounters.com"><img border="0" src="http://cc.amazingcounters.com/counter.php?i=3230662&c=9692299" alt="AmazingCounters.com"></a></div>-->
 <!-- Global site tag (gtag.js) - Google Analytics -->
