--- a/sub_publication.html
+++ b/sub_publication.html
@@ -127,6 +127,17 @@
 </ol>
   
 <h4>
+<a id="publications-J-pages" class="anchor" href="#publications-J-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Invited Talk:</h4>
+
+<ol>
+  
+<li><strong>Underwater Image Enhancement: Challenges, Benchmarks, and Solutions</strong>. Invited Talk, Center of Digital Media Information Processing, Beijing Jiaotong University. <a href="https://github.com/Li-Chongyi/PAPERS/blob/master/BeijiaoPoster.jpg" target="_blank"><font color="#ff0000">[Poster]</font></a></a></li>  
+<li><strong>ASIF-Net: Attention Steered Interweave Fusion Network for RGB-D salient Object Detection</strong>. Invited Talk, ShenZhen Institutes of Advanced Technology, Chinese Academy of Sciences. <a href="https://github.com/Li-Chongyi/PAPERS/blob/master/talk_poster1.jpg" target="_blank"><font color="#ff0000">[Poster]</font></a></a></li>  
+
+
+</ol>
+  
+<h4>
 <a id="publications-J-pages" class="anchor" href="#publications-J-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Patent:</h4>
 
 <ol>
