--- a/sub_publication.html
+++ b/sub_publication.html
@@ -56,7 +56,7 @@
 <a id="publications-J-pages" class="anchor" href="#publications-J-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>2020:</h4>
 
 <ol>
-<li> <strong>Chongyi Li</strong>, Runmin Cong, Sam Kwong, et al., ASIF-Net: Attention steered interweave fusion network for RGB-D salient object detection, <strong><ud2>IEEE Transactions on Cybernetics </ud2></strong> (SCI, IF=10.387), 2020.</li> 
+<li> <strong>Chongyi Li</strong>, Runmin Cong, Sam Kwong, et al., ASIF-Net: Attention steered interweave fusion network for RGB-D salient object detection, <strong><ud2>IEEE Transactions on Cybernetics </ud2></strong> (SCI, IF=10.387), 2020. <a href="https://ieeexplore.ieee.org/document/8998588" target="_blank"><font color="#1C86EE">[PDF--Arxiv version]</font></a></li> 
 
 </ol>    
   
