--- a/index.html
+++ b/index.html
@@ -139,8 +139,8 @@ a, a:visited { color : #0050e7; }
                 Chunle Guo*, <b>Chongyi Li*</b>, Jichang Guo, Chen Change Loy, Junhui Hou, Sam Kwong, Runmin Cong.
                 <br>
                 <span class="links">
-                    <a href="https://arxiv.org/abs/2001.06826">PDF</a>
-                    <a href="https://li-chongyi.github.io/Proj_Zero-DCE.html">Project Page</a>
+                    <a href="https://arxiv.org/abs/2001.06826">PDF</a>| 
+                    <a href="https://li-chongyi.github.io/Proj_Zero-DCE.html">Project Page</a>| 
                     <a href="https://li-chongyi.github.io/Proj_Zero-DCE.html">Code</a>
                 </span>
             </p>
@@ -158,9 +158,9 @@ a, a:visited { color : #0050e7; }
                 <b>Chongyi Li</b>, Chunle Guo, Wenqi Ren, Runmin Cong, Junhui Hou, Sam Kwong, Dacheng Tao.
                 <br>
                 <span class="links">
-                    <a href="https://ieeexplore.ieee.org/document/8917818">PDF</a>
-                    <a href="https://li-chongyi.github.io/proj_benchmark.html">Project Page</a>
-		    <a href="https://drive.google.com/file/d/12W_kkblc2Vryb9zHQ6BfGQ_NKUfXYk13/view">Benchmark</a>
+                    <a href="https://ieeexplore.ieee.org/document/8917818">PDF</a>| 
+                    <a href="https://li-chongyi.github.io/proj_benchmark.html">Project Page</a>| 
+		    <a href="https://drive.google.com/file/d/12W_kkblc2Vryb9zHQ6BfGQ_NKUfXYk13/view">Benchmark</a>| 
                     <a href="https://github.com/Li-Chongyi/Water-Net_Code">Code</a>
                 </span>
            </p>
