--- a/index.html
+++ b/index.html
@@ -178,9 +178,9 @@ a, a:visited { color : #0050e7; }
                 <b>Chongyi Li</b>, Runmin Cong, Junhui Hou, Sanyi Zhang, Yue Qian, Sam Kwong.
                 <br>
                 <span class="links">
-                    <a href="https://ieeexplore.ieee.org/document/8793227">PDF</a>
-                    <a href="https://li-chongyi.github.io/proj_optical_saliency.html">Project Page</a>
-		    <a href="https://drive.google.com/file/d/15FOnRo1xnz05fcNkXBhWy8WL0C26i8y4/view">Benchmark</a>
+                    <a href="https://ieeexplore.ieee.org/document/8793227">PDF</a>| 
+                    <a href="https://li-chongyi.github.io/proj_optical_saliency.html">Project Page</a>| 
+		    <a href="https://drive.google.com/file/d/15FOnRo1xnz05fcNkXBhWy8WL0C26i8y4/view">Benchmark</a>| 
                     <a href="https://drive.google.com/file/d/1nnZKphu9_4oBvie4yqdxG95tYZRsqj4W/view">Results</a>
                 </span>
            </p>
@@ -198,8 +198,8 @@ a, a:visited { color : #0050e7; }
                 Chunle Guo*, <b>Chongyi Li*</b>, Jichang Guo, Runmin Cong, Huazhu Fu, Ping Han.
                 <br>
                 <span class="links">
-                    <a href="https://ieeexplore.ieee.org/document/8579111">PDF</a>
-                    <a href="https://li-chongyi.github.io/proj_SR.html">Project Page</a>
+                    <a href="https://ieeexplore.ieee.org/document/8579111">PDF</a>| 
+                    <a href="https://li-chongyi.github.io/proj_SR.html">Project Page</a>| 
                     <a href="https://drive.google.com/file/d/18y6jpGnjqYINzMFJeVHcg4SQiYM-lFBb/view">Code</a>
                 </span>
             </p>
