--- a/sub_publication.html
+++ b/sub_publication.html
@@ -56,7 +56,8 @@
 <a id="publications-J-pages" class="anchor" href="#publications-J-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>2020:</h4>
 
 <ol>
-<li> <strong>Chongyi Li</strong>, Runmin Cong, Sam Kwong, et al., ASIF-Net: Attention steered interweave fusion network for RGB-D salient object detection, <strong><ud2>IEEE Transactions on Cybernetics </ud2></strong> (SCI, IF=10.387), 2020. <a href="https://ieeexplore.ieee.org/document/8998588" target="_blank"><font color="#1C86EE">[PDF-offical version]</font></a></li> 
+<li> Chunle Guo<sup>*</sup>, <strong>Chongyi Li<sup>*</sup></strong>, Jichang Guo, et al., Zero-reference deep curve estimation for low-light image enhancement, <strong><ud2>IEEE Conference on Computer Vision and Pattern Recognition (CVPR) </ud2></strong>, 2020. <a href="https://arxiv.org/abs/2001.06826" target="_blank"><font color="#1C86EE">[PDF-Arxiv version]</font></a><a href="https://arxiv.org/pdf/1901.05495.pdf" target="_blank"><font color="#1C86EE">[PDF--Arxiv version]</font></a> <a href="https://ieeexplore.ieee.org/document/8917818" target="_blank"><font color="#1C86EE">[PDF-offical version]</font></a> <a href="https://li-chongyi.github.io/Proj_Zero-DCE.html" target="_blank"><font color="#1C86EE">[Project]</font></a></li> 
+<li> <strong>Chongyi Li</strong>, Runmin Cong, Sam Kwong, et al., ASIF-Net: Attention steered interweave fusion network for RGB-D salient object detection, <strong><ud2>IEEE Transactions on Cybernetics </ud2></strong> (SCI, IF=10.387), 2020. <a href="https://ieeexplore.ieee.org/document/8998588" target="_blank"><font color="#1C86EE">[PDF-offical version]</font></a></li>   
 
 </ol>    
   
