--- a/proj_benchmark.html
+++ b/proj_benchmark.html
@@ -59,8 +59,8 @@ The benchmark evaluations and the proposed Water-Net demonstrate the performance
 <p>
   Chongyi Li, Chunle Guo, Wenqi Ren, Runmin Cong, Junhui Hou, Sam Kwong, Dacheng Tao
   <br><strong>An Underwater Image Enhancement Benchmark Dataset and Beyond</strong>. 
-  <a href="https://arxiv.org/pdf/1901.05495.pdf"><font color="#ff0000">[arXiv]</font></a>
-  <a href="https://ieeexplore.ieee.org/document/8917818"><font color="#ff0000">[TIP]</font></a><br><br>
+  <a href="https://arxiv.org/pdf/1901.05495.pdf"><font color="#ff0000">[arXiv version]</font></a>
+  <a href="https://ieeexplore.ieee.org/document/8917818"><font color="#ff0000">[official version TIP 2019]</font></a><br><br>
 </p>
 
 <hr />
@@ -82,8 +82,10 @@ The benchmark evaluations and the proposed Water-Net demonstrate the performance
 <a href="https://pan.baidu.com/s/1eCUD_yvDxzwXgfm_C7oiJg" target="_blank"><font color="#ff0000">[Baidu Cloud Link]</font></a><br>
 <br>[Challenging Set]<a href="https://drive.google.com/open?id=1Ew_r83nXzVk0hlkfuomWqsAIxuq6kaN4" target="_blank"><font color="#ff0000">[Google Drive Link]</font></a>
 <a href="https://pan.baidu.com/s/1nujbTEC8mMPDmft_XUlpCg" target="_blank"><font color="#ff0000">[Baidu Cloud Link]</font></a><br>
-<br>If you need this dataset, please email us and cite the related papers. When you ask for the password, please use official email address and provide your name and institution. Thanks.<br>
+<br><b>If you need this dataset, please email us and cite the related papers. When you ask for the password, please use official email address and provide your name and institution. Thanks.</b><br>
 
+<br>C. Li, C. Guo, W. Ren, R. Cong, J. Hou, S. Kwong, D. Tao, “An Underwater Image Enhancement Benchmark Dataset and Beyond,” IEEE Trans. Image Process., vol. 29, pp.4376-4389, 2019.<br> 
+      
 <li>We also released our PR 2019 Synthetic Underwater Image Datasets. Have fun! <a href="https://li-chongyi.github.io/proj_underwater_image_synthesis.html" target="_blank"><font color="#ff0000">[Project page]</font></a></a></li>
 <p> If you use this dataset, please cite the related paper. Thanks.</p>
         
@@ -107,7 +109,7 @@ We released our TIP 2016 underwater image enhancement code. Have fun! <a href="h
 </p>  
 
 <hr />
-<h4>If you use this code and dataset, please cite the following papers:</h4>
+<h4>If you use this code and dataset, please also cite the following papers:</h4>
 
 <p>
 
