--- a/index.html
+++ b/index.html
@@ -247,27 +247,25 @@ a, a:visited { color : #0050e7; }
 
 <ul>
 <li><strong>IEEE</strong>:</li>
-IEEE Transactions on Image Processing; IEEE Transactions on Cybernetics; IEEE Transactions on Circuits and Systems for Video Technology; IEEE Transactions on Neural Networks and Learning Systems;
-IEEE Transactions on Broadcasting; IEEE Transactions on Instrumentation and Measurement; IEEE Transactions on Circuits and Systems II: Express Briefs; 
-IEEE ACCESS; IEEE Signal Processing Letters; IEEE Journal of Ocean Engineering
+TPAMI, TIP, TCyber, TCSVT, TNNLS, TBro, TIM, TCSVT II: Express Briefs, ACCESS, SPL, JOE
 
 <li><strong>Elsevier</strong>:</li> 
-Journal of Ocean Engineering; Digital Signal Processing; Neurocomputing; Pattern Recognition Letters; Signal Processing: Image Communication; Journal of Computers & Graphics; Knowledge-based Systems 
+JOE, DSP, Neurocomputing, PRL; SPIC, Journal of Computers & Graphics; Knowledge-based Systems 
 
 <li><strong>Springer</strong>:</li> 
-The Visual Computer; SCIENCE CHINA Information Sciences; Machine Vision and Applications; EURASIP Journal on Image and Video Processing
+The VC; SCIENCE CHINA Information Sciences; Machine Vision and Applications; EURASIP Journal on Image and Video Processing
 
 <li><strong>ACM</strong>:</li> 
 Computing Surveys
 
 <li><strong>IET</strong>:</li> 
-Computer Vision
+CV
 
 <li><strong>SPIE</strong>:</li> 
-Journal of Electronic Imaging
+JEI
 
 <li><strong>Conference</strong>:</li>
-ICPR2018; ACM MM2019 (Program Committee Member);ICME2020
+ICPR 2018; ACM MM 2019;ICME 2020; ACM MM2020; MICCAI 2020
 </ul>
 <br>
 <hr />    
