--- a/index.html
+++ b/index.html
@@ -247,13 +247,13 @@ a, a:visited { color : #0050e7; }
 
 <ul>
 <li><strong>IEEE</strong>:</li>
-TPAMI, TIP, TCyber, TCSVT, TNNLS, TBro, TIM, TCSVT II: Express Briefs, ACCESS, SPL, JOE
+TPAMI, TIP, TCyber, TCSVT, TNNLS, TB, TIM, TCSVT II: Express Briefs, ACCESS, SPL, JOE
 
 <li><strong>Elsevier</strong>:</li> 
-JOE, DSP, Neurocomputing, PRL; SPIC, Journal of Computers & Graphics; Knowledge-based Systems 
+JOE, DSP, Neurocomputing, PRL; SPIC, JCG; Knowledge-based Systems 
 
 <li><strong>Springer</strong>:</li> 
-The VC; SCIENCE CHINA Information Sciences; Machine Vision and Applications; EURASIP Journal on Image and Video Processing
+VC, SCIS,  MVA,  EURASIP JIVP
 
 <li><strong>ACM</strong>:</li> 
 Computing Surveys
