--- a/Proj_Zero-DCE.html
+++ b/Proj_Zero-DCE.html
@@ -198,7 +198,7 @@
         <h2>Highlights</h2>
         <ol>
           <li><p>We propose the first low-light enhancement network that is <b>independent of paired and unpaired training data</b>, thus avoiding the risk of overfitting. As a result, our method generalizes well to various lighting conditions.</p></li>
-          <li><p>We design a simple and lightweight deep network that is able to <b>approximate pixel-wise and higher-order curves by iteratively applying itself</b>. Such image-specific curves can effectively perform mapping within a wide dynamic range.</p></li>
+          <li><p>We design an image-specific curve that is able to <b>approximate pixel-wise and higher-order curves by iteratively applying itself</b>. Such image-specific curve can effectively perform mapping within a wide dynamic range.</p></li>
           <li><p>We show the potential of training a deep image enhancement model in the absence of reference images through task-specific non-reference loss functions that indirectly evaluate enhancement quality.  It is capable of processing images in real-time (<b>about 500 FPS for images of size 640*480*3 on GPU) and takes only 30 minutes for training</b>.</p></li>
         </ol>
       </div>
@@ -311,8 +311,8 @@ Ablation study of the advantage of three-channel adjustment (RGB, CIE Lab, YCbCr
             </td>
             <td width="20%">
               <center>
-                <a href="https://github.com/Li-Chongyi/PAPERS/blob/master/Zero-DCE_supplementary%20material.pdf" target="_blank" class="imageLink"><img src="./Zero-DCE_files/paper.png" ,="" width="80%"></a><br><br>
-                <a href="https://github.com/Li-Chongyi/PAPERS/blob/master/Zero-DCE_supplementary%20material.pdf" target="_blank">Supplementary Material</a>
+                <a href="https://github.com/Li-Chongyi/PAPERS/blob/master/01658-supp.pdf" target="_blank" class="imageLink"><img src="./Zero-DCE_files/paper.png" ,="" width="80%"></a><br><br>
+                <a href="https://github.com/Li-Chongyi/PAPERS/blob/master/01658-supp.pdf" target="_blank">Supplementary Material</a>
               </center>
             </td>
             <td width="20%">
