--- a/proj_benchmark.html
+++ b/proj_benchmark.html
@@ -82,7 +82,7 @@ The benchmark evaluations and the proposed Water-Net demonstrate the performance
 <a href="https://pan.baidu.com/s/1eCUD_yvDxzwXgfm_C7oiJg" target="_blank"><font color="#ff0000">[Baidu Cloud Link]</font></a><br>
 <br>[Challenging Set]<a href="https://drive.google.com/open?id=1Ew_r83nXzVk0hlkfuomWqsAIxuq6kaN4" target="_blank"><font color="#ff0000">[Google Drive Link]</font></a>
 <a href="https://pan.baidu.com/s/1nujbTEC8mMPDmft_XUlpCg" target="_blank"><font color="#ff0000">[Baidu Cloud Link]</font></a><br>
-<br><b>If you need this dataset, please email us and cite the related papers. When you ask for the password, please use official email address and provide your name and institution. Thanks.</b><br>
+<br><b>Passwords: Raw: 1234567; Reference: 8901234; Challenging: 5678901</b><br>
 
 <br>C. Li, C. Guo, W. Ren, R. Cong, J. Hou, S. Kwong, D. Tao, “An Underwater Image Enhancement Benchmark Dataset and Beyond,” IEEE Trans. Image Process., vol. 29, pp.4376-4389, 2019.<br> 
       
