--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@ a, a:visited { color : #0050e7; }
 
 <ul>
 <li><strong>IEEE</strong>:</li>
-TPAMI, TIP, TCyber, TCSVT, TNNLS, TB, TIM, TCSVT II: Express Briefs, ACCESS, SPL, JOE
+TPAMI, TIP, TCyber, TCSVT, TNNLS, TB, TIM, TCSVT II: Express Briefs, ACCESS, SPL, JOE，JBHI
 
 <li><strong>Elsevier</strong>:</li> 
 JOE, DSP, Neurocomputing, PRL; SPIC, JCG; Knowledge-based Systems 
