--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ a, a:visited { color : #0050e7; }
 
 <ul>
 <li><strong>Chongyi Li</strong>, Runmin Cong, Chunle Guo, Hua Li, Chunjie Zhang, Feng Zheng, and Yao Zhao, <ud2>A Parallel Down-Up Fusion Network for Salient Object Detection in Optical Remote Sensing Images</ud2> is accepted by <strong>Neurocomputing</strong>.</li>
-<li>We release more details of our Zero-DCE for low-light image enhancement. You can find the <a href="https://li-chongyi.github.io/Proj_Zero-DCE.html" target="_blank"><font color="#ff0000">[Project Page]</font></a>. Have fun!</li>
+<li>We release more details of our Zero-DCE for low-light image enhancement <strong>(CVPR 2020)</strong>. You can find the <a href="https://li-chongyi.github.io/Proj_Zero-DCE.html" target="_blank"><font color="#ff0000">[Project Page]</font></a>. Have fun!</li>
 <li><strong>Chongyi Li</strong>, Runmin Cong, Sam Kwong, Junhui Hou, Huazhu Fu, Guopu Zhu, Dingwen Zhang, and Qingming Huang, <ud2>ASIF-Net: Attention Steered Interweave Fusion Network for RGB-D salient Object Detection</ud2> is accepted by <strong>IEEE Transactions on Cybernetics</strong>.</li>
 <li>We released the dataset and testing model of our TIP 2019 <ud2>An Underwater Image Enhancement Benchmark Dataset and Beyond</ud2>. Have fun! <a href="https://li-chongyi.github.io/proj_benchmark.html" target="_blank"><font color="#ff0000">[Project page]</font></a></a></li>
 <p> If you use this dataseet or code, please cite the related paper. Thanks.</p>
