--- a/index.html
+++ b/index.html
@@ -72,11 +72,15 @@ a, a:visited { color : #0050e7; }
 <h2>
 <a id="Biography-page" class="anchor" href="#biography-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to Chongyi Li's Homepage</h2>
 <div style="text-align: justify; display: block; margin-right: auto;">
-<p>Hi！I am <strong>Chongyi Li (李重仪)</strong>. I received my Ph.D. degree from School of Electrical and Information Engineering, Tianjin University (TJU), Tianjin, China. 
-  From 2016 to 2017, I conducted the Ph.D. research as a Visiting Student with Research School of Engineering, Australian National University (ANU), Canberra, Australia. I was advised by Prof. 
-  <a href="http://seea.tju.edu.cn/szdw/xxx/201709/t20170902_298201.htm"><font color="#1C86EE">Jichang Guo</font></a> in TJU and Prof. <a href="http://www.porikli.com/"><font color="#1C86EE">
-  Fatih Porikli</font></a> (IEEE Fellow) in ANU. From 10/2018 to 01/2020, I was a postdoctoral fellow with Department of Computer Science, City University of Hong Kong (CityU), Kowloon, Hong Kong. I worked with Prof. <a href="http://www.cs.cityu.edu.hk/~cssamk/research_group/index.html"><font color="#1C86EE">Sam Kwong</font></a> (IEEE Fellow) and Dr.<a href="https://sites.google.com/site/junhuihoushomepage/"><font color="#1C86EE"> Junhui Hou</font></a>  in CityU, Hong Kong.<br>
-  Now, I join in the MMLab@NTU as a research fellow and work with Dr.<a href="http://personal.ie.cuhk.edu.hk/~ccloy/index.html"><font color="#1C86EE"> Chen Change Loy</font></a>,  School of Computer Science and Engineering, Nanyang Technological University (NTU), Singapore.
+<p>
+<br>2020/01-now, I join in the MMLab@NTU as a research fellow and work with Dr.<a href="http://personal.ie.cuhk.edu.hk/~ccloy/index.html"><font color="#1C86EE"> Chen Change Loy</font></a>,  School of Computer Science and Engineering, Nanyang Technological University (NTU), Singapore.</br>
+
+<br>2018/10-2020/01, I was a postdoctoral fellow and worked with Prof. <a href="http://www.cs.cityu.edu.hk/~cssamk/research_group/index.html"><font color="#1C86EE">Sam Kwong</font></a> (IEEE Fellow), Department of Computer Science, City University of Hong Kong (CityU), Kowloon, Hong Kong.</br>
+
+<br>2016/12-2017/12, I was a joint Ph.D. student at Research School of Engineering, Australian National University (ANU), Canberra, Australia, under the supervision of Prof. <a href="http://www.porikli.com/"><font color="#1C86EE">Fatih Porikli</font></a> (IEEE Fellow).</br>
+
+<br>2014/09-2018/07, I was a Ph.D. student at School of Electrical and Information Engineering, Tianjin University (TJU), Tianjin, China, under the supervision of Prof.<a href="http://seea.tju.edu.cn/szdw/xxx/201709/t20170902_298201.htm"><font color="#1C86EE">Jichang Guo.</br>
+
 <hr />
 </p>
 <h2>
