--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ a, a:visited { color : #0050e7; }
 <section>
 
 <h2>
-<a id="Biography-page" class="anchor" href="#biography-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to Chongyi Li's Homepage</h2>
+<a id="Biography-page" class="anchor" href="#biography-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to Chongyi Li (李重仪)'s Homepage</h2>
 <div style="text-align: justify; display: block; margin-right: auto;">
 <p>
 <br>2020/01-now, I join in the MMLab@NTU as a research fellow and work with Dr.<a href="http://personal.ie.cuhk.edu.hk/~ccloy/index.html"><font color="#1C86EE"> Chen Change Loy</font></a>,  School of Computer Science and Engineering, Nanyang Technological University (NTU), Singapore.</br>
@@ -79,7 +79,7 @@ a, a:visited { color : #0050e7; }
 
 <br>2016/12-2017/12, I was a joint Ph.D. student at Research School of Engineering, Australian National University (ANU), Canberra, Australia, under the supervision of Prof. <a href="http://www.porikli.com/"><font color="#1C86EE">Fatih Porikli</font></a> (IEEE Fellow).</br>
 
-<br>2014/09-2018/07, I was a Ph.D. student at School of Electrical and Information Engineering, Tianjin University (TJU), Tianjin, China, under the supervision of Prof.<a href="http://seea.tju.edu.cn/szdw/xxx/201709/t20170902_298201.htm"><font color="#1C86EE">Jichang Guo.</br>
+<br>2014/09-2018/07, I was a Ph.D. student at School of Electrical and Information Engineering, Tianjin University (TJU), Tianjin, China, under the supervision of Prof. <a href="http://seea.tju.edu.cn/szdw/xxx/201709/t20170902_298201.htm"><font color="#1C86EE">Jichang Guo</font></a>.</br>
 
 <hr />
 </p>
@@ -89,8 +89,8 @@ a, a:visited { color : #0050e7; }
 <ul>
 <div style="text-align: justify; display: block; margin-right: auto;">
 <p><strong>image processing, computer vision, deep learning, particularly in the domains of</strong> 
-  <li>image and video restoration and enhancement, such as images and videos captured in adverse weather (hazy, foggy, sandy, dusty, rainy, snowy day) and special circumstances (underwater, weak illumination);</li>
-  <li>RGB-D data related applications, such as color image guided depth super-resolution reconstruction and RGB-D salient object detection;</li>
+  <li>image and video restoration and enhancement：1) images and videos captured in adverse weather (hazy, foggy, sandy, dusty, rainy, snowy day), 2) special circumstances (underwater, weak illumination), 3) general photo enhancement</li>
+  <li>RGB-D data related applications: 1) color image guided depth super-resolution reconstruction, 2) RGB-D salient object detection</li>
 
   
 </ul>
@@ -249,9 +249,15 @@ a, a:visited { color : #0050e7; }
 <hr /> 
   
  <h2>
-<a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Professional Service (Reviewer):</h2>
+<a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Professional Service:</h2>
 
 <ul>
+<br>(Guest Editor)</br>
+Signal Processing : Image Communication
+
+<br>Multimedia Tools and Applications
+
+<br>(Reviewer)</br>
 <li><strong>IEEE</strong>:</li>
 TPAMI, TIP, TCyber, TCSVT, TNNLS, TMM, TB, TIM, TCSVT II: Express Briefs, ACCESS, SPL, JOE，JBHI
 
