--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ a, a:visited { color : #0050e7; }
 <ul>
 <div style="text-align: justify; display: block; margin-right: auto;">
 <p><strong>image processing, computer vision, deep learning, particularly in the domains of</strong> 
-  <li>image and video restoration and enhancement：1) images and videos captured in adverse weather (hazy, foggy, sandy, dusty, rainy, snowy day), 2) special circumstances (underwater, weak illumination), 3) general photo enhancement</li>
+  <li>image and video restoration and enhancement：1) images and videos captured in adverse weather (hazy, foggy, sandy, dusty, rainy, snowy day), 2) or special circumstances (underwater, weak illumination), 3) general photo enhancement</li>
   <li>RGB-D data related applications: 1) color image guided depth super-resolution reconstruction, 2) RGB-D salient object detection</li>
 
   
