--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@ a, a:visited { color : #0050e7; }
 
 <ul>
 <div style="text-align: justify; display: block; margin-right: auto;">
-<p><strong>image processing, computer vision, deep learning, particularly in the domains of</strong> 
-  <li>image and video restoration and enhancement：1) images and videos captured in adverse weather (hazy, foggy, sandy, dusty, rainy, snowy day), 2) or special circumstances (underwater, weak illumination), 3) general photo enhancement</li>
-  <li>RGB-D data related applications: 1) color image guided depth super-resolution reconstruction, 2) RGB-D salient object detection</li>
+<p><strong>image processing, computer vision, and deep learning, particularly in the domains of</strong> 
+  <li>image and video restoration and enhancement：1) images and videos captured in adverse weather (hazy, foggy, sandy, dusty, rainy, snowy day), 2) or special circumstances (underwater, weak illumination), 3) general photo enhancement, image/depth super-resolution.</li>
+  <li>Salient object detection: 1) RGB-D salient object detection, 2) remote sensing image salient object detection.</li>
 
   
 </ul>
