--- a/index.html
+++ b/index.html
@@ -252,12 +252,12 @@ a, a:visited { color : #0050e7; }
 <a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Professional Service:</h2>
 
 <ul>
-<br>(Guest Editor)</br>
+<br><strong>Guest Editor</strong></br>
 Signal Processing : Image Communication
 
 <br>Multimedia Tools and Applications
 
-<br>(Reviewer)</br>
+<br><strong>Reviewer</strong></br>
 <li><strong>IEEE</strong>:</li>
 TPAMI, TIP, TCyber, TCSVT, TNNLS, TMM, TB, TIM, TCSVT II: Express Briefs, ACCESS, SPL, JOE，JBHI
 
