--- a/sub_publication.html
+++ b/sub_publication.html
@@ -29,7 +29,7 @@
 </header>
 
 <section>
-<p>
+<p align="justify">
 <h2>
 <a id="publications-pages" class="anchor" href="#publications-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Publications:</h2>
 <!--
