--- a/sub_publication.html
+++ b/sub_publication.html
@@ -29,7 +29,7 @@
 </header>
 
 <section>
-<p align="justify">
+
 <h2>
 <a id="publications-pages" class="anchor" href="#publications-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Publications:</h2>
 <!--
@@ -56,10 +56,10 @@
 <a id="publications-J-pages" class="anchor" href="#publications-J-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>2020:</h4>
 
 <ol>
-<li> Chunle Guo, <strong>Chongyi Li (co-first author)</strong>, Jichang Guo, et al., Zero-reference deep curve estimation for low-light image enhancement, <strong><ud2>IEEE Conference on Computer Vision and Pattern Recognition (CVPR) </ud2></strong>, 2020. <a href="https://arxiv.org/abs/2001.06826" target="_blank"><font color="#1C86EE">[PDF-Arxiv version]</font></a> <a href="https://ieeexplore.ieee.org/document/8917818" target="_blank"><font color="#1C86EE">[PDF-offical version]</font></a> <a href="https://li-chongyi.github.io/Proj_Zero-DCE.html" target="_blank"><font color="#1C86EE">[Project]</font></a></li> 
+<p align="justify"><li> Chunle Guo, <strong>Chongyi Li (co-first author)</strong>, Jichang Guo, et al., Zero-reference deep curve estimation for low-light image enhancement, <strong><ud2>IEEE Conference on Computer Vision and Pattern Recognition (CVPR) </ud2></strong>, 2020. <a href="https://arxiv.org/abs/2001.06826" target="_blank"><font color="#1C86EE">[PDF-Arxiv version]</font></a> <a href="https://ieeexplore.ieee.org/document/8917818" target="_blank"><font color="#1C86EE">[PDF-offical version]</font></a> <a href="https://li-chongyi.github.io/Proj_Zero-DCE.html" target="_blank"><font color="#1C86EE">[Project]</font></a></li> 
 <li> <strong>Chongyi Li</strong>, Runmin Cong, Sam Kwong, et al., ASIF-Net: Attention steered interweave fusion network for RGB-D salient object detection, <strong><ud2>IEEE Transactions on Cybernetics </ud2></strong> (SCI, IF=10.387), 2020. <a href="https://ieeexplore.ieee.org/document/8998588" target="_blank"><font color="#1C86EE">[PDF-offical version]</font></a> <a href="https://github.com/Li-Chongyi/ASIF-Net" target="_blank"><font color="#1C86EE">[Results]</font></a></li> 
 <li> <strong>Chongyi Li</strong>, Runmin Cong, Chunle Guo, et al., A parallel down-up fusion network for salient object detection in optical remote sensing images, <strong><ud2>Neurocomputing</ud2></strong> (SCI, IF=4.072), 2020. <a href="" target="_blank"><font color="#1C86EE">[PDF-offical version]</font></a> <a href="" target="_blank"><font color="#1C86EE">[Results]</font></a></li>  
-
+ </p>
 </ol>    
   
 <h4>
@@ -149,7 +149,7 @@
 
 
 </ol>
- </p>
+
 
 
 </section>
