--- a/index.html
+++ b/index.html
@@ -258,26 +258,19 @@ Signal Processing : Image Communication
 <br>Multimedia Tools and Applications
 
 <br><strong>Reviewer</strong></br>
-<li><strong>IEEE</strong>:</li>
-TPAMI, TIP, TCyber, TCSVT, TNNLS, TMM, TB, TIM, TCSVT II: Express Briefs, ACCESS, SPL, JOE，JBHI
+<li><strong>IEEE</strong>:</li>TPAMI, TIP, TCyber, TCSVT, TNNLS, TMM, TB, TIM, TGRS, TCSVT II: Express Briefs, ACCESS, SPL, JOE，JBHI
 
-<li><strong>Elsevier</strong>:</li> 
-JOE, DSP, Neurocomputing, PRL; SPIC, JCG; Knowledge-based Systems 
+<li><strong>Elsevier</strong>:</li> JOE, DSP, Neurocomputing, PRL; SPIC, JCG; Knowledge-based Systems 
 
-<li><strong>Springer</strong>:</li> 
-VC, SCIS,  MVA,  EURASIP JIVP
+<li><strong>Springer</strong>:</li> VC, SCIS,  MVA,  EURASIP JIVP
 
-<li><strong>ACM</strong>:</li> 
-Computing Surveys
+<li><strong>ACM</strong>:</li> Computing Surveys
 
-<li><strong>IET</strong>:</li> 
-CV
+<li><strong>IET</strong>:</li> CV
 
-<li><strong>SPIE</strong>:</li> 
-JEI
+<li><strong>SPIE</strong>:</li> JEI
 
-<li><strong>Conference</strong>:</li>
-ICPR 2018; ACM MM 2019;ICME 2020; ACM MM2020; MICCAI 2020
+<li><strong>Conference</strong>:</li>ICPR 2018; ACM MM 2019;ICME 2020; ACM MM2020; MICCAI 2020
 </ul>
 <br>
 <hr />    
