--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@ Signal Processing : Image Communication
 
 <li><strong>Elsevier</strong>:</li> JOE, DSP, Neurocomputing, PRL; SPIC, JCG; Knowledge-based Systems 
 
-<li><strong>Springer</strong>:</li> VC, SCIS,  MVA,  EURASIP JIVP
+<li><strong>Springer</strong>:</li> IJCV, VC, SCIS,  MVA,  EURASIP JIVP
 
 <li><strong>ACM</strong>:</li> Computing Surveys
 
