--- a/index.html
+++ b/index.html
@@ -138,14 +138,14 @@ a, a:visited { color : #0050e7; }
             <img src="./Zero-DCE_files/framework.png" class="publogo" width="300 px">
             <p> 
                 <strong>
-                    <a href="https://arxiv.org/abs/2001.06826">Zero-Reference Deep Curve Estimation for Low-Light Image Enhancement</a>
+                    <a href="http://openaccess.thecvf.com/content_CVPR_2020/papers/Guo_Zero-Reference_Deep_Curve_Estimation_for_Low-Light_Image_Enhancement_CVPR_2020_paper.pdf">Zero-Reference Deep Curve Estimation for Low-Light Image Enhancement</a>
                 </strong>
 		<em>CVPR, 2020</em>
                 <br>
                 Chunle Guo*, <b>Chongyi Li*</b>, Jichang Guo, Chen Change Loy, Junhui Hou, Sam Kwong, Runmin Cong.
                 <br>
                 <span class="links">
-                    <a href="https://arxiv.org/abs/2001.06826">PDF</a>| 
+                    <a href="http://openaccess.thecvf.com/content_CVPR_2020/papers/Guo_Zero-Reference_Deep_Curve_Estimation_for_Low-Light_Image_Enhancement_CVPR_2020_paper.pdf">PDF</a>| 
                     <a href="https://li-chongyi.github.io/Proj_Zero-DCE.html">Project Page</a>| 
                     <a href="https://li-chongyi.github.io/Proj_Zero-DCE.html">Code</a>
                 </span>
