--- a/Proj_Zero-DCE.html
+++ b/Proj_Zero-DCE.html
@@ -305,8 +305,8 @@ Ablation study of the advantage of three-channel adjustment (RGB, CIE Lab, YCbCr
           <tbody><tr>
             <td width="20%">
               <center>
-                <a href="https://arxiv.org/abs/2001.06826" target="_blank" class="imageLink"><img src="./Zero-DCE_files/paper.png" ,="" width="80%"></a><br><br>
-                <a href="https://arxiv.org/abs/2001.06826" target="_blank">Paper</a>
+                <a href="http://openaccess.thecvf.com/content_CVPR_2020/papers/Guo_Zero-Reference_Deep_Curve_Estimation_for_Low-Light_Image_Enhancement_CVPR_2020_paper.pdf" target="_blank" class="imageLink"><img src="./Zero-DCE_files/paper.png" ,="" width="80%"></a><br><br>
+                <a href="http://openaccess.thecvf.com/content_CVPR_2020/papers/Guo_Zero-Reference_Deep_Curve_Estimation_for_Low-Light_Image_Enhancement_CVPR_2020_paper.pdf" target="_blank">Paper</a>
               </center>
             </td>
             <td width="20%">
@@ -331,7 +331,8 @@ Ablation study of the advantage of three-channel adjustment (RGB, CIE Lab, YCbCr
           <pre>@Article{Zero-DCE,
           author = {Guo, Chunle and Li, Chongyi and Guo, Jichang and Loy, Chen Change and Hou, Junhui and Kwong, Sam and Cong Runmin},
           title = {Zero-reference deep curve estimation for low-light image enhancement},
-          journal = {arXiv preprint arXiv:2001.06826},
+          journal = {CVPR},
+          pape={1780-1789},
           year = {2020}
           }
           </pre>
