--- a/Proj_Zero-DCE.html
+++ b/Proj_Zero-DCE.html
@@ -311,8 +311,8 @@ Ablation study of the advantage of three-channel adjustment (RGB, CIE Lab, YCbCr
             </td>
             <td width="20%">
               <center>
-                <a href="https://github.com/Li-Chongyi/PAPERS/blob/master/01658-supp.pdf" target="_blank" class="imageLink"><img src="./Zero-DCE_files/paper.png" ,="" width="80%"></a><br><br>
-                <a href="https://github.com/Li-Chongyi/PAPERS/blob/master/01658-supp.pdf" target="_blank">Supplementary Material</a>
+                <a href="https://openaccess.thecvf.com/content_CVPR_2020/supplemental/Guo_Zero-Reference_Deep_Curve_CVPR_2020_supplemental.pdf" target="_blank" class="imageLink"><img src="./Zero-DCE_files/paper.png" ,="" width="80%"></a><br><br>
+                <a href="https://openaccess.thecvf.com/content_CVPR_2020/supplemental/Guo_Zero-Reference_Deep_Curve_CVPR_2020_supplemental.pdf" target="_blank">Supplementary Material</a>
               </center>
             </td>
             <td width="20%">
