--- a/sub_publication.html
+++ b/sub_publication.html
@@ -32,6 +32,7 @@
 
 <h2>
 <a id="publications-pages" class="anchor" href="#publications-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Publications:</h2>
+<div style="text-align: justify; display: block; margin-right: auto;">
 <!--
 <h4>
 <a id="publications-J-pages" class="anchor" href="#publications-J-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Under Review</h4>
@@ -149,7 +150,7 @@
 
 
 </ol>
-
+</div>
 
 
 </section>
