--- a/index.html
+++ b/index.html
@@ -156,6 +156,25 @@ a, a:visited { color : #0050e7; }
           <br>
           <br>
         <div class="publication">
+            <img src="./ECCV20_files/ECCV20-visual_results.png" class="publogo" width="300 px">
+            <p> 
+                <strong>
+                    <a href="">RGB-D Salient Object Detection with Cross-Modality Modulation and Selection</a>
+                </strong>
+		<em>ECCV, 2020</em>
+                <br>
+                <b>Chongyi Li</b>, Runmin Cong, Yongri Piao, Qianqian Xu, Chen Change Loy.
+                <br>
+                <span class="links">
+                    <a href="">PDF</a>| 
+                    <a href="https://li-chongyi.github.io/Proj_ECCV20">Project Page</a>| 
+                    <a href="https://github.com/Li-Chongyi/cmMS-ECCV20">Code</a>
+                </span>
+            </p>
+          </div>
+          <br>
+          <br>
+        <div class="publication">
             <img src="./benchmark_logo.png" class="publogo" height="110" width="300 px">
             <p> 
                 <strong>
