--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ a, a:visited { color : #0050e7; }
                 <strong>
                     <a href="http://openaccess.thecvf.com/content_CVPR_2020/papers/Guo_Zero-Reference_Deep_Curve_Estimation_for_Low-Light_Image_Enhancement_CVPR_2020_paper.pdf">Zero-Reference Deep Curve Estimation for Low-Light Image Enhancement</a>
                 </strong>
-		<em>CVPR, 2020</em>
+		<em><b>CVPR, 2020</b></em>
                 <br>
                 Chunle Guo*, <b>Chongyi Li*</b>, Jichang Guo, Chen Change Loy, Junhui Hou, Sam Kwong, Runmin Cong.
                 <br>
@@ -161,7 +161,7 @@ a, a:visited { color : #0050e7; }
                 <strong>
                     <a href="">RGB-D Salient Object Detection with Cross-Modality Modulation and Selection</a>
                 </strong>
-		<em>ECCV, 2020</em>
+		<em><b>ECCV, 2020</b></em>
                 <br>
                 <b>Chongyi Li</b>, Runmin Cong, Yongri Piao, Qianqian Xu, Chen Change Loy.
                 <br>
@@ -180,7 +180,7 @@ a, a:visited { color : #0050e7; }
                 <strong>
                     <a href="https://ieeexplore.ieee.org/document/8917818">An Underwater Image Enhancement Benchmark Dataset and Beyond</a>
                 </strong>
-		 <em>TIP, 2020</em>
+		 <em><b>TIP, 2020</b></em>
                 <br>
                 <b>Chongyi Li</b>, Chunle Guo, Wenqi Ren, Runmin Cong, Junhui Hou, Sam Kwong, Dacheng Tao.
                 <br>
@@ -200,7 +200,7 @@ a, a:visited { color : #0050e7; }
                 <strong>
                     <a href="https://ieeexplore.ieee.org/document/8793227">Nested Network With Two-Stream Pyramid for Salient Object Detection in Optical Remote Sensing Images</a>
                 </strong>
-		 <em>TGARS, 2019</em>
+		 <em><b>TGARS, 2019</b></em>
                 <br>
                 <b>Chongyi Li</b>, Runmin Cong, Junhui Hou, Sanyi Zhang, Yue Qian, Sam Kwong.
                 <br>
@@ -220,7 +220,7 @@ a, a:visited { color : #0050e7; }
                 <strong>
                     <a href="https://ieeexplore.ieee.org/document/8579111">Hierarchical Features Driven Residual Learning for Depth Map Super-Resolution</a>
                 </strong>
-		<em>TIP, 2019</em>
+		<em><b>TIP, 2019</b></em>
                 <br>
                 Chunle Guo*, <b>Chongyi Li*</b>, Jichang Guo, Runmin Cong, Huazhu Fu, Ping Han.
                 <br>
