--- a/Proj_ECCV20.html
+++ b/Proj_ECCV20.html
@@ -185,13 +185,17 @@
       </div>
       <div class="section">
        <ol>
-        <p><b>Overview of our network architecture</b>. The inputs of the network are the RGB image and its corresponding depth map. The cmMS block consists of a cmFM module, an AFS module, and an sg-PEA module. Here, the sg-PEA module further contains an S-Pre unit and an E-Pre unit.</p>
+        <p>
+          <div style="text-align: justify; display: block; margin-right: auto;">
+          <b>Overview of our network architecture</b>. The inputs of the network are the RGB image and its corresponding depth map. The cmMS block consists of a cmFM module, an AFS module, and an sg-PEA module. Here, the sg-PEA module further contains an S-Pre unit and an E-Pre unit.</p>
          </ol>
       </div>
       <!--=================Highlights==========================-->
       <div class="section abstract">
         <h2>Highlights</h2>
         <ol>
+          <div style="text-align: justify; display: block; margin-right: auto;">
+           Our method is unique in that 
           <li><p>a cross-modality feature modulation module that enhances RGB feature representations by taking the corresponding depth features as prior;</p></li>
           <li><p>an adaptive feature selection module that progressively emphasizes the importance of channel features in self- and cross-modalities while fusing the significant multi-modality spatial features</p></li>
         </ol>
@@ -204,7 +208,7 @@
         <div id="vid4" class="img_container">
           <center>
             <div class="leftView">
-              <div class="mask" style="width:100px;height:100px"></div>
+              <div class="mask" style="width:110px;height:130px"></div>
               <img class="std" src="./ECCV20_files/ECCV20-visual_results.png">
             </div>
           </center>
@@ -215,7 +219,7 @@
         <div id="vimeo90k" class="img_container">
           <center>
             <div class="leftView">
-              <div class="mask" style="width:70px;height:70px"></div>
+              <div class="mask" style="width:130px;height:130px"></div>
               <img class="small" src="./ECCV20_files/ECCV20-PR_Curves.png">
             </div>
           </center>
@@ -226,7 +230,7 @@
         <div id="vimeo90k" class="img_container">
           <center>
             <div class="leftView">
-              <div class="mask" style="width:70px;height:70px"></div>
+              <div class="mask" style="width:130px;height:130px"></div>
               <img class="small" src="./ECCV20_files/ECCV20-quantitative_results.png">
             </div>
           </center>
@@ -240,13 +244,13 @@
           <tbody><tr>
             <td width="20%">
               <center>
-                <a href="http://openaccess.thecvf.com/content_CVPR_2020/papers/Guo_Zero-Reference_Deep_Curve_Estimation_for_Low-Light_Image_Enhancement_CVPR_2020_paper.pdf" target="_blank" class="imageLink"><img src="./ECCV20_files/ECCV20_logo.png" ,="" width="80%"></a><br><br>
+                <a href="http://openaccess.thecvf.com/content_CVPR_2020/papers/Guo_Zero-Reference_Deep_Curve_Estimation_for_Low-Light_Image_Enhancement_CVPR_2020_paper.pdf" target="_blank" class="imageLink"><img src="./ECCV20_files/ECCV20_logo.png" ,="" width="50%"></a><br><br>
                 <a href="http://openaccess.thecvf.com/content_CVPR_2020/papers/Guo_Zero-Reference_Deep_Curve_Estimation_for_Low-Light_Image_Enhancement_CVPR_2020_paper.pdf" target="_blank">Paper</a>
               </center>
             </td>
             <td width="20%">
               <center>
-                <a href="https://openaccess.thecvf.com/content_CVPR_2020/supplemental/Guo_Zero-Reference_Deep_Curve_CVPR_2020_supplemental.pdf" target="_blank" class="imageLink"><img src="./ECCV20_files/ECCV20_logo.png" ,="" width="80%"></a><br><br>
+                <a href="https://openaccess.thecvf.com/content_CVPR_2020/supplemental/Guo_Zero-Reference_Deep_Curve_CVPR_2020_supplemental.pdf" target="_blank" class="imageLink"><img src="./ECCV20_files/ECCV20_logo.png" ,="" width="50%"></a><br><br>
                 <a href="https://openaccess.thecvf.com/content_CVPR_2020/supplemental/Guo_Zero-Reference_Deep_Curve_CVPR_2020_supplemental.pdf" target="_blank">Supplementary Material</a>
               </center>
             </td>
