--- a/Proj_Zero-DCE.html
+++ b/Proj_Zero-DCE.html
@@ -305,13 +305,13 @@ Ablation study of the advantage of three-channel adjustment (RGB, CIE Lab, YCbCr
           <tbody><tr>
             <td width="20%">
               <center>
-                <a href="http://openaccess.thecvf.com/content_CVPR_2020/papers/Guo_Zero-Reference_Deep_Curve_Estimation_for_Low-Light_Image_Enhancement_CVPR_2020_paper.pdf" target="_blank" class="imageLink"><img src="./Zero-DCE_files/paper.png" ,="" width="80%"></a><br><br>
+                <a href="http://openaccess.thecvf.com/content_CVPR_2020/papers/Guo_Zero-Reference_Deep_Curve_Estimation_for_Low-Light_Image_Enhancement_CVPR_2020_paper.pdf" target="_blank" class="imageLink"><img src="./Zero-DCE_files/CVPR20_logo.png" ,="" width="80%"></a><br><br>
                 <a href="http://openaccess.thecvf.com/content_CVPR_2020/papers/Guo_Zero-Reference_Deep_Curve_Estimation_for_Low-Light_Image_Enhancement_CVPR_2020_paper.pdf" target="_blank">Paper</a>
               </center>
             </td>
             <td width="20%">
               <center>
-                <a href="https://openaccess.thecvf.com/content_CVPR_2020/supplemental/Guo_Zero-Reference_Deep_Curve_CVPR_2020_supplemental.pdf" target="_blank" class="imageLink"><img src="./Zero-DCE_files/paper.png" ,="" width="80%"></a><br><br>
+                <a href="https://openaccess.thecvf.com/content_CVPR_2020/supplemental/Guo_Zero-Reference_Deep_Curve_CVPR_2020_supplemental.pdf" target="_blank" class="imageLink"><img src="./Zero-DCE_files/CVPR20_logo.png" ,="" width="80%"></a><br><br>
                 <a href="https://openaccess.thecvf.com/content_CVPR_2020/supplemental/Guo_Zero-Reference_Deep_Curve_CVPR_2020_supplemental.pdf" target="_blank">Supplementary Material</a>
               </center>
             </td>
