--- a/Proj_ECCV20.html
+++ b/Proj_ECCV20.html
@@ -216,7 +216,7 @@
         <br>
         <!--=================*******==========================-->
         <h3>2. P-R Curves</h3>
-        <div id="vimeo90k" class="img_container">
+        <div id="vid4" class="img_container">
           <center>
             <div class="leftView">
               <div class="mask" style="width:160px;height:160px"></div>
@@ -227,7 +227,7 @@
         <br>
         <!--=================*******==========================-->
         <h3>3. Quantitative Results</h3>
-        <div id="vimeo90k" class="img_container">
+        <div id="vid4" class="img_container">
           <center>
             <div class="leftView">
               <div class="mask" style="width:160px;height:160px"></div>
