--- a/Proj_ECCV20.html
+++ b/Proj_ECCV20.html
@@ -268,7 +268,7 @@
         <h2>Citation</h2>
         <div class="section bibtex">
           <pre>@Article{li2020,
-          author = {Li, Chongyi and Cong, RunminGuo and Piao, Yongri and Xu, Qianqian and Loy, Chen Change},
+          author = {Li, Chongyi and Cong, Runmin and Piao, Yongri and Xu, Qianqian and Loy, Chen Change},
           title = {RGB-D salient object eetection with cross-modality modulation and selection},
           journal = {ECCV},
           pape={},
