--- a/Proj_ECCV20.html
+++ b/Proj_ECCV20.html
@@ -210,6 +210,8 @@
             <div class="leftView">
               <div class="mask" style="width:130px;height:160px"></div>
               <img class="std" src="./ECCV20_files/ECCV20-visual_results.png">
+              <div class="mask" style="width:130px;height:160px"></div>
+              <img class="std" src="./ECCV20_files/ECCV20_supp_results.png">
             </div>
           </center>
         </div>
