--- a/Proj_ECCV20.html
+++ b/Proj_ECCV20.html
@@ -222,7 +222,7 @@
           <center>
             <div class="leftView">
               <div class="mask" style="width:160px;height:160px"></div>
-              <img class="small" src="./ECCV20_files/ECCV20-PR_Curves.png">
+              <img class="std" src="./ECCV20_files/ECCV20-PR_Curves.png">
             </div>
           </center>
         </div>
@@ -233,7 +233,7 @@
           <center>
             <div class="leftView">
               <div class="mask" style="width:160px;height:160px"></div>
-              <img class="small" src="./ECCV20_files/ECCV20-quantitative_results.png">
+              <img class="std" src="./ECCV20_files/ECCV20-quantitative_results.png">
             </div>
           </center>
         </div>
