--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@ a, a:visited { color : #0050e7; }
                 <strong>
                     <a href="https://ieeexplore.ieee.org/document/8793227">Nested Network With Two-Stream Pyramid for Salient Object Detection in Optical Remote Sensing Images</a>
                 </strong>
-		 <em><b>TGARS, 2019</b></em>
+		 <em><b>TGARS, 2020</b></em>
                 <br>
                 <b>Chongyi Li</b>, Runmin Cong, Junhui Hou, Sanyi Zhang, Yue Qian, Sam Kwong.
                 <br>
@@ -209,6 +209,25 @@ a, a:visited { color : #0050e7; }
                     <a href="https://li-chongyi.github.io/proj_optical_saliency.html">Project Page</a>| 
 		    <a href="https://drive.google.com/file/d/15FOnRo1xnz05fcNkXBhWy8WL0C26i8y4/view">Benchmark</a>| 
                     <a href="https://drive.google.com/file/d/1nnZKphu9_4oBvie4yqdxG95tYZRsqj4W/view">Results</a>
+                </span>
+           </p>
+        </div>
+        <br>
+        <br>
+        <div class="publication">
+            <img src="./PR_logo.jpg" class="publogo" height="130" width="300 px">
+            <p> 
+                <strong>
+                    <a href="https://www.sciencedirect.com.remotexs.ntu.edu.sg/science/article/pii/S0031320319303401">Underwater Scene Prior Inspired Deep Underwater Image and Video Enhancement/a>
+                </strong>
+		 <em><b>PR, 2020</b></em>
+                <br>
+                <b>Chongyi Li</b>, Saeed Anway, Fatih Porikli.
+                <br>
+                <span class="links">
+                    <a href="https://www.sciencedirect.com.remotexs.ntu.edu.sg/science/article/pii/S0031320319303401">PDF</a>| 
+                    <a href="https://li-chongyi.github.io/proj_underwater_image_synthesis.html">Project Page</a>| 
+                    <a href="https://github.com/saeed-anwar/UWCNN">Code</a>
                 </span>
            </p>
         </div>
