--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@ a, a:visited { color : #0050e7; }
             <img src="./PR_logo.jpg" class="publogo" height="130" width="300 px">
             <p> 
                 <strong>
-                    <a href="https://www.sciencedirect.com.remotexs.ntu.edu.sg/science/article/pii/S0031320319303401">Underwater Scene Prior Inspired Deep Underwater Image and Video Enhancement/a>
+                    <a href="https://www.sciencedirect.com.remotexs.ntu.edu.sg/science/article/pii/S0031320319303401">Underwater Scene Prior Inspired Deep Underwater Image and Video Enhancement</a>
                 </strong>
 		 <em><b>PR, 2020</b></em>
                 <br>
