--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@ a, a:visited { color : #0050e7; }
                 </strong>
 		 <em><b>PR, 2020</b></em>
                 <br>
-                <b>Chongyi Li</b>, Saeed Anway, Fatih Porikli.
+                <b>Chongyi Li</b>, Saeed Anwar, Fatih Porikli.
                 <br>
                 <span class="links">
                     <a href="https://www.sciencedirect.com.remotexs.ntu.edu.sg/science/article/pii/S0031320319303401">PDF</a>| 
