--- a/index.html
+++ b/index.html
@@ -234,6 +234,24 @@ a, a:visited { color : #0050e7; }
         <br>
 	<br>
         <div class="publication">
+            <img src="./TC2020_logo.jpg" class="publogo" height="130" width="300 px">
+            <p> 
+                <strong>
+                    <a href="https://ieeexplore.ieee.org.remotexs.ntu.edu.sg/stamp/stamp.jsp?tp=&arnumber=8998588">ASIF-Net: Attention Steered Interweave Fusion Network for RGB-D Salient Object Detection</a>
+                </strong>
+		 <em><b>TCyb, 2020</b></em>
+                <br>
+                <b>Chongyi Li</b>, Runmin Cong, Sam Kwong, Junhui Hou, Huazhu Fu, Guopu Zhu, Dingwen Zhang, Qingming Huang.
+                <br>
+                <span class="links">
+                    <a href="https://ieeexplore.ieee.org.remotexs.ntu.edu.sg/stamp/stamp.jsp?tp=&arnumber=8998588">PDF</a>| 
+                    <a href="https://github.com/Li-Chongyi/ASIF-Net">Code and Results</a>
+                </span>
+           </p>
+        </div>
+        <br>
+	<br>
+        <div class="publication">
             <img src="./depth_SR_logo.png" class="publogo" height="130" width="300 px">
             <p> 
                 <strong>
