--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@ a, a:visited { color : #0050e7; }
         <br>
 	<br>
         <div class="publication">
-            <img src="./TC2020_logo.jpg" class="publogo" height="130" width="300 px">
+            <img src="./TC2020_logo.png" class="publogo" height="130" width="300 px">
             <p> 
                 <strong>
                     <a href="https://ieeexplore.ieee.org.remotexs.ntu.edu.sg/stamp/stamp.jsp?tp=&arnumber=8998588">ASIF-Net: Attention Steered Interweave Fusion Network for RGB-D Salient Object Detection</a>
