--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@ a, a:visited { color : #0050e7; }
                 </strong>
 		 <em><b>TCyb, 2020</b></em>
                 <br>
-                <b>Chongyi Li</b>, Runmin Cong, Sam Kwong, Junhui Hou, Huazhu Fu, Guopu Zhu, Dingwen Zhang, Qingming Huang.
+                <b>Chongyi Li</b>, Runmin Cong, Sam Kwong, et al.
                 <br>
                 <span class="links">
                     <a href="https://ieeexplore.ieee.org.remotexs.ntu.edu.sg/stamp/stamp.jsp?tp=&arnumber=8998588">PDF</a>| 
