--- a/index.html
+++ b/index.html
@@ -175,6 +175,25 @@ a, a:visited { color : #0050e7; }
           <br>
           <br>
         <div class="publication">
+            <img src="./ACMMM20_files/ACMMM_segmentation.png.png" class="publogo" width="300 px">
+            <p> 
+                <strong>
+                    <a href="">NuI-Go: Recursive Non-Local Encoder-Decoder Network for Retinal Image Non-Uniform Illumination Removal</a>
+                </strong>
+		<em><b>ACM MM, 2020</b></em>
+                <br>
+                <b>Chongyi Li</b>, Huazhu Fu, Runmin Cong, Zechao Li, Qianqian Xu.
+                <br>
+                <span class="links">
+                    <a href="">PDF</a>| 
+                    <a href="Proj_ACMMM20_NuI-Go.html">Project Page</a>| 
+                    <a href="">Code</a>
+                </span>
+            </p>
+          </div>
+          <br>
+          <br>
+        <div class="publication">
             <img src="./benchmark_logo.png" class="publogo" height="110" width="300 px">
             <p> 
                 <strong>
