--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@ a, a:visited { color : #0050e7; }
           <br>
           <br>
         <div class="publication">
-            <img src="./ACMMM20_files/ACMMM_segmentation.png.png" class="publogo" width="300 px">
+            <img src="./ACMMM_logo.png" class="publogo" width="300 px">
             <p> 
                 <strong>
                     <a href="">NuI-Go: Recursive Non-Local Encoder-Decoder Network for Retinal Image Non-Uniform Illumination Removal</a>
