--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@ a, a:visited { color : #0050e7; }
                 <span class="links">
                     <a href="https://www.sciencedirect.com.remotexs.ntu.edu.sg/science/article/pii/S0031320319303401">PDF</a>| 
                     <a href="https://li-chongyi.github.io/proj_underwater_image_synthesis.html">Project Page</a>| 
-                    <a href="https://github.com/saeed-anwar/UWCNN">Code</a>
+                    <a href="https://li-chongyi.github.io/proj_underwater_image_synthesis.html">Code</a>
                 </span>
            </p>
         </div>
