--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@ Signal Processing : Image Communication
 <br>Multimedia Tools and Applications
 
 <br><strong>Reviewer</strong></br>
-<li><strong>IEEE</strong>:</li>TPAMI, TIP, TCyber, TCSVT, TNNLS, TMM, TB, TIM, TGARS, TCSVT II: Express Briefs, ACCESS, SPL, JOE，JBHI
+<li><strong>IEEE</strong>:</li>TPAMI, TIP, TCyber, TCSVT, TNNLS, TMM, TB, TIM, TGARS, TCSVT II: Express Briefs, ACCESS, SPL, JOE, JBHI, J-STARS
 
 <li><strong>Elsevier</strong>:</li> JOE, DSP, Neurocomputing, PRL; SPIC, JCG; Knowledge-based Systems 
 
