--- a/index.html
+++ b/index.html
@@ -325,7 +325,15 @@ a, a:visited { color : #0050e7; }
 </ul>
 <br>
 <hr /> 
-  
+
+ <h2>
+<a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Teaching:</h2>
+<ul>
+<li>NTU AI6126: Advanced Computer Vision, Teaching Assistant, 2020.</li>
+</ul>
+<br>
+<hr /> 
+
  <h2>
 <a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Professional Service:</h2>
 
