--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@ a, a:visited { color : #0050e7; }
                 <b>Chongyi Li</b>, Runmin Cong, Yongri Piao, Qianqian Xu, Chen Change Loy.
                 <br>
                 <span class="links">
-                    <a href="https://arxiv.org/abs/2007.07051">PDF</a>| 
+                    <a href="https://www.ecva.net/papers/eccv_2020/papers_ECCV/papers/123530222.pdf">PDF</a>| 
                     <a href="https://li-chongyi.github.io/Proj_ECCV20">Project Page</a>| 
                     <a href="https://github.com/Li-Chongyi/cmMS-ECCV20">Code</a>
                 </span>
